--- a/template/style.css
+++ b/template/style.css
@@ -41,7 +41,9 @@ body {
 	float: right;
 	background-position-x: left;
 }
-
+button:hover {
+	text-decoration:underline ;
+}
 .postagem{
 	padding: 20px;
 	margin-bottom: 20px;
@@ -113,7 +115,9 @@ h3 {
 	padding: 5px;
 	border-radius:10px;
 }
-
+#mais:hover{
+	display: flex;
+}
 .branco{
 	margin: 0;
 	padding: 0;
