--- a/template/style.css
+++ b/template/style.css
@@ -13,8 +13,18 @@ body {
 /*
 **** Layout ****
 */
+header {
+	padding:10px;
+	display:block;
+	width:100%;
+	line-height:3px;
+
+}
+section {
+	margin:0px auto;
+	display:inline-block;
+}
 #area-cabecalho {
-	margin-bottom: 50px;
 	display: block;
 	width:100%;
 	background-color: #252424;
@@ -32,11 +42,20 @@ body {
 	margin: 0 auto;
 	padding: 15px;
 }
+#internet {
+	display:block;
+}
+#defesa-de-rede {
+	display:block;
+	text-align:center;
+}
 
 #area-postagens {
 	margin-top: 100px;
 	width: 660px;
+	display:block;
 	float: left;
+	
 }
 
 #area-lateral {
@@ -69,9 +88,8 @@ body {
 #rodape {
 	text-align: left;
 	background: #CCC;
-	margin-top: 800px;
 	max-width: 100%;
-	font-size: 0.5em;
+	font-size: 0.7em;
 	padding: 5px;
 	border-bottom: 1px dotted #CCC;	
 }
