--- a/template/style2.css
+++ b/template/style2.css
@@ -17,7 +17,7 @@
 }
 
 #area-cabecalho {
-	margin-bottom: 50px;
+	margin-bottom: 150px;
 	display: block;
 	width:100%;
     max-width: 100%;
@@ -26,6 +26,7 @@
     display: inline;
 	text-align: center;
 	position:fixed;
+    z-index:1;
 }
 
 #area-logo, #area-menu {
@@ -35,10 +36,9 @@
 /*
 **** Formatação do menu ****
 */
+
 a {
-    width: 100%;
-    display: inline;
-	text-decoration:none;
+	text-decoration: none;	
 }
 
 a:link, a:visited {
@@ -52,6 +52,13 @@ a:hover {
 #area-cabecalho a:link, #area-cabecalho a:visited {
 	color: #FFF;
 	padding: 8px 12px;
+}
+
+#area-cabecalho a:hover {
+	color: #010005;
+	background: #FFF;
+	border-radius:10px;
+	text-decoration: none;
 }
 button:link, button:visited {
 	color: #000001;
