--- a/template/style2.css
+++ b/template/style2.css
@@ -16,23 +16,63 @@
     }
 }
 
+header {
+	padding:10px;
+	display:block;
+	max-width:100%;
+    position:fixed;
+	line-height:3px;
+
+}
+header {
+	width:100%;
+	padding:10px;
+	display:block;
+	line-height:3px;
+}
+
+header > nav {
+	margin:5px;
+	max-width:100vw;
+	padding:10px;
+	display: flex;
+	align-items: flex-end;
+	float: left;
+}
+
+nav > .branco{
+	margin:10px;
+	padding: 10px;
+	display: inline-block;
+	float:left;
+}
+.branco{
+	margin: 0;
+	padding: 0;
+	color: white;
+	text-shadow:5px 3px 3px #0000ff89;
+	float: left;
+}
+
+
 #area-cabecalho {
-	margin-bottom: 150px;
 	display: block;
 	width:100%;
-    max-width: 100%;
 	background-color: #252424;
 	padding: 15px;
-    display: inline;
 	text-align: center;
 	position:fixed;
-    z-index:1;
+}
+#area-cabecalho > li {
+	 margin:4px;
+	 max-width:100%;
+	 padding:10px;
+	 display:inline;
 }
 
 #area-logo, #area-menu {
 	padding: 10px;
 }
-
 /*
 **** Formatação do menu ****
 */
@@ -115,7 +155,7 @@ li {
 }
 
 /* Seção Sobre Mim */
-#sobre-mim {
+#sobre-mim {                                                                                                        
     color: #080808;
     background-size:cover;
     background-repeat: no-repeat;
