--- a/template/style4.css
+++ b/template/style4.css
@@ -1,3 +1,7 @@
+
+
+
+
 @charset "UTF-8";
 * {
 	margin: 0;
@@ -5,10 +9,33 @@
 }
 
 body {
-	font-size: 1em;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
 	background: #e6e6e6;
 }
+
+header {
+	width:100%;
+	padding:10px;
+	display:block;
+	line-height:3px;
+}
+
+header > nav {
+	margin:5px;
+	max-width:100vw;
+	padding:10px;
+	display: flex;
+	align-items: flex-end;
+	float: left;
+}
+
+nav > .branco{
+	margin:10px;
+	padding: 10px;
+	display: inline-block;
+	float:left;
+}
+	
 
 #area-cabecalho {
 	margin-bottom: 50px;
@@ -79,25 +106,53 @@ h3 {
 	padding: 0;
 	color: white;
 	text-shadow:5px 3px 3px #0000ff89;
+	font-size: 1.2em;
 	float: left;
 }
 
 .form-container{
-	margin: 150px;
-    display: block;
+	width: 90%;
+	margin-top: 150px;
+	padding: 50px 20px;
+	border-radius: 10px;	
+    display: center;
     align-items: center;
-    text-align: center;
+    text-align: left;
 	z-index: 4;
+	justify-content: center;
+
+}
+.container {
+	background-color: #fff;
+	padding:30px;
+	border-radius: 10px;
+	box-shadow:0 0 10px rgba(0, 0, 0, 0.1);
+	width:10%;
+	max-width: 500px;
 }
 .input{
 	display: block-flex;
-	max-width: 20%;
-	padding: 5px;
-	border:none;
-	border-radius: 10px;
+	max-width: 100%;
+	padding: 10px;
+	border-radius: 20px;
+	box-sizing:border-box;
 	align-items: center;
 	text-align: center;
 
+}
+.btn {
+	text-align: center;
+}
+.btn input [type="submit"]{
+	background-color: 	#252424;
+	color: #FFF;
+	border: none;
+	border-radius: 10px;
+	padding: 10px  20px;
+	cursor: pointer;
+}
+.btn input [type="submit"]:hover{
+	background-color:#000;
 }
 input {
 	margin: 15px;
