add layout do formulário

--- a/template/style.css
+++ b/template/style.css
@@ -155,7 +155,7 @@ a:hover {
 /*
 **** Formatações em geral ****
 text-decoration: none;
-h1 {
+	 {
 	color: #4e4e4e;
 	font-size: 2.5em;
 	*/
@@ -192,7 +192,7 @@ h3 {
 }
 .postagem-h3 {
 	background:none;
-}
 
+}
 
 
